...
      }
    }

    loop.dispatchEvent(.viewCreated)

    tableView.tableFooterView = UIView()
    tableView.accessibilityIdentifier = "MovieListTableView"

  }
}

extension MovieListViewController: MovieListAction {
  func fetchMovies() {
...
