...
                            <constraint firstItem="B2T-qH-8UG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8Mp-Qv-y5J"/>
                            <constraint firstItem="UiI-n0-4zG" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="V0z-a1-KuO"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="UiI-n0-4zG" secondAttribute="trailing" id="rML-I2-Tcj"/>
                            <constraint firstItem="UiI-n0-4zG" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="yXi-4i-FRg"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="MovieDB" id="pT2-R4-5nu"/>
                    <connections>
                        <outlet property="activityIndicator" destination="B2T-qH-8UG" id="VDA-jD-wc5"/>
                        <outlet property="tableView" destination="UiI-n0-4zG" id="hYV-FA-xTM"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
...
